# InfoDenguePredict

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGES.rst  Dockerfile  README.md  README.rst  docs-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  teste2.ipynb  teste_randomfci.ipynb  trained_None_model.h5
Notebooks/: Data Exploration.ipynb  Running LSTM models.ipynb  Spatial Exploration.ipynb  State Level data.ipynb
docs/: Makefile  conf.py  contributing.rst  index.rst  models.rst
infodenguepredict/: __init__.py  example-predict_settings.py  predict.py  predict_settings.py  skeleton.py
infodenguepredict/analysis/: cluster_viz.py  clustering.py  clusters_CE.pkl  clusters_ES.pkl  clusters_MA.pkl  clusters_MG.pkl  clusters_PR.pkl  clusters_RJ.pkl  cross_residual.py  distance.py
infodenguepredict/data/: .env_example  __init__.py  codigos_rj.xlsx  example-settings.ini  infodengue.py  satellite.py
infodenguepredict/models/: Arima_pmdarima.ipynb  DVAR.py  GAS.py  GASLLEV.py  GASReg.py  GASX.py  LSTM_plots.ipynb  R_forecast.py  R_tscount.py  VAR.py  VAR2.py  __init__.py  arima.py  arimax.py  clusters_PR.pkl  cross_prediction_RQF.py  ensemble.py  example-predict_settings.py  exogenous.py  gp_narx.py  lasso.py  lstm.py  markov_switch.py  metrics_viz.py  mlp.py  qqplot.py  quantile_forest.py  quantile_lgbm.py  quantile_lgbm_transf.py  random_forest.py  rgf.py  rgf_model.py  sarimax.py  tpot_1.py  tpot_lasso.py  val_pmdarima.py
infodenguepredict/models/bayesian/: __init__.py  prophet.py
infodenguepredict/models/deeplearning/: __init__.py  cross_prediction_lstm.py  infodengue.py  lstm.py  lstm_airflow.py  lstm_ranking_correlation.py  mlp.py  preprocessing.py  settings.py
infodenguepredict/models/visualizations/: metrics_viz.py
infodenguepredict/results/quantile_lgbm/CE/saved_models/: 2300309_city_model50_1W.joblib  2300309_city_model50_2W.joblib  2300309_city_model50_3W.joblib  2300309_city_model50_4W.joblib  2300309_city_model5_1W.joblib  2300309_city_model5_2W.joblib  2300309_city_model5_3W.joblib  2300309_city_model5_4W.joblib  2300309_city_model95_1W.joblib  2300309_city_model95_2W.joblib  2300309_city_model95_3W.joblib  (+1156 more)
tensorboard/: events.out.tfevents.1564329222.RIOanalytics  events.out.tfevents.1564329244.RIOanalytics  events.out.tfevents.1564329261.RIOanalytics  events.out.tfevents.1564329675.RIOanalytics  events.out.tfevents.1564330141.RIOanalytics  events.out.tfevents.1564343972.RIOanalytics
tests/: conftest.py  test_data.py  test_predict.py  test_skeleton.py  test_train_lstm.py
(+4737 files in other folders)
