[tool.poetry]
name = "infodenguepredict"
version = "0.5.0"
description = ""
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
keras = "^3.0.4"
seaborn = "^0.13.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4.0"
pmdarima = "^2.0.4"
rpy2 = "^3.5.15"
pydot = "^2.0.0"
h5py = "^3.10.0"
geopandas = "^0.14.2"
scipy = "^1.12.0"
shap = "^0.44.1"
joblib = "^1.3.2"
flaml = "^2.1.1"
lightgbm = "^4.3.0"
duecredit = "^0.9.3"
holoviews = "^1.18.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-coverage = "^0.0"
coverage = "^7.4.0"
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
